Added underlying structures and enough code to write the init command.

--- a/Github DNS Init Command Buildout.ipynb
+++ b/Github DNS Init Command Buildout.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e3ba4b9f231efcc1311cca5600c2b3913aa116eb4d6a25eae3337e52a386d635"
+  "signature": "sha256:f891cb558683c49364fbe4bdaf874b3e1301daf19ff42a56e92f1fefd70c5ed8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -30,7 +30,7 @@
       "import xmlrpc.client as rpc\n",
       "#api = rpc.ServerProxy('https://rpc.gandi.net/xmlrpc/')\n",
       "api = rpc.ServerProxy('https://rpc.ote.gandi.net/xmlrpc/')\n",
-      "api.version.info(apikey)\n"
+      "api.account.info(apikey)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -38,13 +38,49 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 3,
+       "prompt_number": 26,
        "text": [
-        "{'api_version': '3.3.24'}"
+        "{'credits': None,\n",
+        " 'date_credits_expiration': None,\n",
+        " 'products': None,\n",
+        " 'rating_enabled': True,\n",
+        " 'fullname': 'Jared BUNTING',\n",
+        " 'average_credit_cost': None,\n",
+        " 'handle': 'JB174-GANDI',\n",
+        " 'id': 7163,\n",
+        " 'resources': {'available': None,\n",
+        "  'expired': None,\n",
+        "  'granted': None,\n",
+        "  'used': None},\n",
+        " 'share_definition': None,\n",
+        " 'cycle_day': 1}"
        ]
       }
      ],
-     "prompt_number": 3
+     "prompt_number": 26
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "[ x for x in api.system.listMethods() if x.startswith(\"\") ]\n",
+      "try:\n",
+      "    api.account.info(\"blahblah\")\n",
+      "except rpc.Fault:\n",
+      "    print(\"Failed...\")"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "Failed...\n"
+       ]
+      }
+     ],
+     "prompt_number": 29
     },
     {
      "cell_type": "code",
