--- a/Gandi API Testing.ipynb
+++ b/Gandi API Testing.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:815953f8e5518273f6b77e01330a291600639fc64bd3aadf2e94acc0fd8ba05d"
+  "signature": "sha256:4c286aaf10ae002b5851415c35db200291e7a0faa63fa50c87cd9357a61ad9ec"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -68,13 +68,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 36,
+       "prompt_number": 96,
        "text": [
         "[]"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 96
     },
     {
      "cell_type": "code",
@@ -88,13 +88,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 15,
+       "prompt_number": 94,
        "text": [
         "{'bunting.io': 'pending'}"
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 94
     },
     {
      "cell_type": "code",
@@ -199,8 +199,7 @@
      "input": [
       "op = api.operation.info(apikey, op['id'])\n",
       "print(op)\n",
-      "print(op['step'])\n",
-      "print(op['zone'])"
+      "print(op['step'])"
      ],
      "language": "python",
      "metadata": {},
@@ -209,7 +208,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "{'last_error': None, 'type': 'domain_create', 'params': {'domain': 'bunting.io', 'owner': 'JB174-GANDI', 'tld_phase': 'golive', 'ns': ['a.dns.gandi-ote.net', 'b.dns.gandi-ote.net', 'c.dns.gandi-ote.net'], 'tld': 'io', 'tracker_id': 'b3b090df-197a-4c19-ba21-670218f43967', 'remote_addr': '99.5.88.198', 'tech': 'JB174-GANDI', 'duration': 1, 'admin': 'JB174-GANDI', 'accept_contract': True, 'auth_id': 80284, 'param_type': 'domain', 'bill': 'JB174-GANDI'}, 'id': 177519, 'source': 'JB174-GANDI', 'session_id': 80284, 'date_updated': <DateTime '20141231T16:27:10' at 7f79a402fdd8>, 'step': 'BILL', 'eta': 0, 'infos': {'product_name': 'io', 'label': 'bunting.io', 'product_type': 'domain', 'product_action': 'create', 'id': '', 'quantity': '', 'extras': {}}, 'errortype': None, 'date_created': <DateTime '20141231T16:27:09' at 7f79a402f748>, 'date_start': None}\n",
+        "{'last_error': None, 'type': 'domain_create', 'params': {'domain': 'bunting.io', 'owner': 'JB174-GANDI', 'tld_phase': 'golive', 'ns': ['a.dns.gandi-ote.net', 'b.dns.gandi-ote.net', 'c.dns.gandi-ote.net'], 'tld': 'io', 'tracker_id': 'b3b090df-197a-4c19-ba21-670218f43967', 'remote_addr': '99.5.88.198', 'tech': 'JB174-GANDI', 'duration': 1, 'admin': 'JB174-GANDI', 'accept_contract': True, 'auth_id': 80284, 'param_type': 'domain', 'bill': 'JB174-GANDI'}, 'id': 177519, 'source': 'JB174-GANDI', 'session_id': 80284, 'date_updated': <DateTime '20141231T16:27:10' at 7f799d1980f0>, 'step': 'BILL', 'eta': 0, 'infos': {'product_name': 'io', 'label': 'bunting.io', 'product_type': 'domain', 'product_action': 'create', 'id': '', 'quantity': '', 'extras': {}}, 'errortype': None, 'date_created': <DateTime '20141231T16:27:09' at 7f799d1ae5f8>, 'date_start': None}\n",
         "BILL\n"
        ]
       },
@@ -219,12 +218,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-        "\u001b[1;32m<ipython-input-35-bf9bfb120c6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'step'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'zone'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[1;32m<ipython-input-93-bf9bfb120c6d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'step'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'zone'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[1;31mKeyError\u001b[0m: 'zone'"
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 93
     },
     {
      "cell_type": "code",
